happynewyear/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: content-box;
    overflow: hidden;
}


.celebration {
    position: absolute;
    font-size: 2rem;
    opacity: 0.1;
    z-index: 9999;
    pointer-events: none;
    user-select: none;
    animation: float 3.5s linear infinite;
}


.container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
    background-color: black;
    color: white;
    font-family: Arial, sans-serif;
    overflow: hidden;
    animation: backgroundColorChangeAnimation 15s infinite ease-in-out;
}

.animated-text {
    font-size: 40px;
    font-weight: bold;
    animation: pendulum 4s infinite ease-in-out, fontSizeAnimation 1s infinite alternate ease-in-out, colorAnimation 3s infinite linear;
    text-align: center;
    position: absolute;
}

@keyframes float {
    0% {
        transform: translateY(0);
    }
    100% {
        transform: translateY(-300px);
    }
}

/* Animacja zmiany rozmiaru czcionki */
@keyframes fontSizeAnimation {
    0% {
        font-size: 50px;
    }
    50% {
        font-size: 45px;
    }
    100% {
        font-size: 50px;
    }
}

/* Animacja zmiany kolorów RGB */
@keyframes colorAnimation {
    0% {
        color: red;
    }
    25% {
        color: yellow;
    }
    50% {
        color: green;
    }
    75% {
        color: blue;
    }
    100% {
        color: red;
    }
}

@keyframes pendulum {
    0% {
        transform: rotate(0deg);
    }
    25% {
        transform: rotate(15deg);
    }
    50% {
        transform: rotate(-15deg);
    }
    75%{
        transform: rotate(360deg);
    }
    100%{
        transform: rotate(0deg);
    }
}

@keyframes backgroundColorChangeAnimation {
    0% {
        background-color: rgb(67, 0, 0);
    }
    25% {
        background-color: rgb(61, 61, 0);
    }
    50% {
        background-color: rgb(0, 65, 0);
    }
    75% {
        background-color: rgb(0, 0, 68);
    }
    100% {
        background-color: rgb(61, 0, 0);
    }
}

@keyframes openPopupAnimation{
    0%{
        color: rgba(0, 0, 0, 0);
        height: 0px;
    }

    100%{
        color: #000;
        height: 100%;
    }
}



.fixed-button {
    border-radius: 20px;
    border-style: dotted;
    border-color: #fff;
    font-size: 30pt;
    background-color: rgba(0, 0, 0, 0);
    padding: 10px;
    cursor: pointer;
}

.button-and-text {
    position: absolute;
    bottom: 40px;
    text-align: center;
}

p {
    font-size: 8pt;
    padding: 10px;
}


/* popup */

.popup {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.325);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
    visibility: hidden; /* Element jest niewidoczny początkowo */
    opacity: 0; /* Przezroczystość początkowa */
    transition: opacity 0.25s ease-out, visibility 0.25s ease-out;
}
  
.popup.show {
    visibility: visible; /* Pokazuje element */
    opacity: 1; /* Ustawia pełną widoczność */
  }

  .popup-content {
    font-family: 'Arial';
    background: white;
    padding: 20px;
    border-radius: 15px;
    text-align: center;
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.508);
    max-width: 400px;
    width: 60%;
    color: #000;
  }
  
  .popup-content p {
    font-family: 'Arial';
    font-weight: 500;
    background: white;
    font-size: 10pt;
    padding: 10px;
    border-radius: 15px;
    text-align: center;
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.508);    
    color: #000;
  }

  .hidden {
    visibility: hidden; /* Element ukryty */
    opacity: 0;
  }
  
  .close {
    position: absolute;
    top: 10px;
    right: 20px;
    font-size: 24px;
    cursor: pointer;
  }

